--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>vitality</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,800,900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="Style.css"/>
 </head>
 <body>
-$END$
+<div class="header">
+    <div class="class">
+    <h1>WELCOME TO VITALITY!</h1>
+        <hr class="colored">
+        <hr class="colored">
+    <p>All of the sample layouts are included with your download. Select an example layout below to preview!</p>
+    </div>
+    <div class="class2">
+        <a href="#" class="button">VIEW DEMOS</a>
+        <a href="#" class="button">DOCUMENTATION</a>
+    </div>
+</div>
+
 </body>
 </html>
