--- a/index.html
+++ b/index.html
@@ -3,23 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <title>vitality</title>
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,800,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic'
+          rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,800,900' rel='stylesheet'
+          type='text/css'>
     <link rel="stylesheet" href="Style.css"/>
 </head>
 <body>
 <div class="header">
     <div class="class">
-    <h1>WELCOME TO VITALITY!</h1>
+        <h1>WELCOME TO VITALITY!</h1>
         <hr class="colored">
         <hr class="colored">
-    <p>All of the sample layouts are included with your download. Select an example layout below to preview!</p>
+        <p>All of the sample layouts are included with your download. Select an example layout below to preview!</p>
     </div>
     <div class="class2">
         <a href="#" class="button">VIEW DEMOS</a>
         <a href="#" class="button">DOCUMENTATION</a>
     </div>
 </div>
-
+<div class="content">
+    <div class="wrapper">
+        <div class="box">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+        <div class="box2">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+        <div class="box3">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="wrapper2">
+        <div class="box4">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+        <div class="box4">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+        <div class="box4">
+            <img src="screenshot-agency.png" alt="1">
+            <h1>AGENCY</h1>
+            <hr class="wrapper">
+            <hr class="wrapper">
+            <p class="text-muted">Ideal For:</p>
+            <ul class="list-unstyled text-muted">
+                <li>
+                    <em>Agencies</em>
+                </li>
+                <li>
+                    <em>Businesses</em>
+                </li>
+                <li>
+                    <em>Consultants</em>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+</div>
+</div>
 </body>
 </html>
